@startuml

title __PRODUKTE's Class Diagram__\n

  namespace produkte {
    class produkte.Druker {
        - blattMenge : int
        - druckMaterial : String
        - papiergroesse : String
        + Druker()
        + druckeSeite()
        + toString()
    }
  }
  

  namespace produkte {
    class produkte.Main {
        {static} + main()
    }
  }
  

  namespace produkte {
    class produkte.Monitor {
        - breite : double
        - groesseDiagonale : int
        - hoehe : double
        - panelart : String
        - tiefe : double
        + Monitor()
        + toString()
        + zeigeEinBild()
    }
  }
  

  namespace produkte {
    class produkte.Produkt {
        # Bezeichnung : String
        - Preis : double
        + Produkt()
        + getBezeichnung()
        + getPreis()
        + toString()
        # wasBinIch()
    }
  }
  

  produkte.Druker -up-|> produkte.Produkt
  produkte.Monitor -up-|> produkte.Produkt


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
